# calculissimo

./: CMakeLists.txt  README.md  autorun.sh
.github/workflows/: cmake-single-platform-linux.yml
include/: Game.h  Question.h  QuestionGenerator.h  Renderer.h
src/: Game.cpp  QuestionGenerator.cpp  Renderer.cpp  main.cpp
tests/: main.cpp
